feat: filter courses by release status
