# openapi.json
@@ -6,7 +6,7 @@
     "license": {
       "name": ""
     },
-    "version": "1.0.1"
+    "version": "1.1.0"
   },
   "paths": {
     "/v1/courses": {
@@ -14,8 +14,8 @@
         "tags": [
           "Course"
         ],
-        "summary": "Find all courses.",
-        "operationId": "find-all-courses",
+        "summary": "Find all released courses (beta and live status)",
+        "operationId": "find-released-courses",
         "responses": {
           "200": {
             "description": "Courses retrieved successfully",
